; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-space-map-metadata.c_out.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-space-map-metadata.c_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sm_metadata = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"lost track of recursion depth\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sm_metadata*)* @out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @out(%struct.sm_metadata* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sm_metadata*, align 8
  %4 = alloca i32, align 4
  store %struct.sm_metadata* %0, %struct.sm_metadata** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.sm_metadata*, %struct.sm_metadata** %3, align 8
  %6 = getelementptr inbounds %struct.sm_metadata, %struct.sm_metadata* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = call i32 @DMERR(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @ENOMEM, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %27

13:                                               ; preds = %1
  %14 = load %struct.sm_metadata*, %struct.sm_metadata** %3, align 8
  %15 = getelementptr inbounds %struct.sm_metadata, %struct.sm_metadata* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp eq i32 %16, 1
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load %struct.sm_metadata*, %struct.sm_metadata** %3, align 8
  %20 = call i32 @apply_bops(%struct.sm_metadata* %19)
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %18, %13
  %22 = load %struct.sm_metadata*, %struct.sm_metadata** %3, align 8
  %23 = getelementptr inbounds %struct.sm_metadata, %struct.sm_metadata* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* %4, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %21, %9
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @DMERR(i8*) #1

declare dso_local i32 @apply_bops(%struct.sm_metadata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
